--- a/_includes/widgets/googleSearchForm.html
+++ b/_includes/widgets/googleSearchForm.html
@@ -13,7 +13,7 @@
 	}
 </script>
 <section>			
-	<h1 style="">Search <span class="hint">via Google</span></h1>
+	<h1 style="">Pesquisar <span class="hint">via Google</span></h1>
 	<form method="get" action="http://www.google.com/search" id="search" onsubmit="return addSite();">
 		<button type="submit">Find &raquo;</button>
 		<input name="q" type="text" placeholder="Search…" />
