--- a/_includes/widgets/timeLine.html
+++ b/_includes/widgets/timeLine.html
@@ -10,7 +10,7 @@
 {% endcomment %}	
 <section>
 	<nav>
-		<h1>Archive</h1>
+		<h1>Arquivo</h1>
 		<ul class="postList archive">
 		{% for post in site.posts %}
 		
