--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>		
-		{% include headInclude.html %}
-	</head>
-	<body>		
-		<div id="wrap">
-			<header id="header" role="banner" class="box" style="">
-				<ul>
-					<li><a href="/archives.html">Arquivos</a></li>
-					<li><a href="/feed.xml">RSS</a></li> 
-				</ul>
+<head>
+<script>
+	(function(i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r;
+		i[r] = i[r] || function() {
+			(i[r].q = i[r].q || []).push(arguments)
+		}, i[r].l = 1 * new Date();
+		a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+		a.async = 1;
+		a.src = g;
+		m.parentNode.insertBefore(a, m)
+	})(window, document, 'script', '//www.google-analytics.com/analytics.js',
+			'ga');
 
-				<hgroup>
-					<h1><a href="/">{{ site.title }}</a></h1>
-				</hgroup>
-			</header>	
-	<!--- GitHub ribbon -->
-		<a href="https://github.com/Arduino-Minas">
-			<img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub">
-		</a>	
+	ga('create', 'UA-39638790-1', 'github.com');
+	ga('send', 'pageview');
+</script>
+{% include headInclude.html %}
+</head>
+<body>
+	<div id="wrap">
+		<header id="header" role="banner" class="box" style="">
+			<ul>
+				<li><a href="/archives.html">Arquivos</a></li>
+				<li><a href="/feed.xml">RSS</a></li>
+			</ul>
+			<hgroup>
+				<h1>
+					<a href="/">{{ site.title }}</a>
+				</h1>
+			</hgroup>
+		</header>
+		<!--- GitHub ribbon -->
+		<a href="https://github.com/Arduino-Minas"> <img
+			style="position: absolute; top: 0; right: 0; border: 0;"
+			src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"
+			alt="Fork me on GitHub">
+		</a>
