adicionado propriedade para identificar contribuições.

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -9,6 +9,7 @@ layout: page
 	<p>{{ page.excerpt | markdownify }}</p>
 	<a id="more"></a>
 	<h2>Autor: {{ page.author | markdownify }}</h2>
+	<h3>Contribuição: {{ page.contributors | markdownify }}</h3>
 	<hr />
 	{{ content }}
 	<footer>
