--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -4,7 +4,7 @@ layout: page
 <article class="box">
 	<header>
 		<time datetime="{{page.date | date: "%Y-%m-%d"}}" title="{{page.date | date: "%Y-%m-%d"}}">{{page.date | date: "%d.%m.%Y"}}</time>					
-		<h1><span><a href="{{ page.url }}">{{ page.title }}</a></span></h1>	
+		<h1><span><a href="{{ page.projecturl }}">{{ page.title }}</a></span></h1>	
 	</header>
 	<p>{{ page.excerpt | markdownify }}</p>
 	<a id="more"></a>
