--- a/_includes/widgets/postTagList.html
+++ b/_includes/widgets/postTagList.html
@@ -9,7 +9,7 @@
 	For more Jekyll widgets, see <http://www.github.com/NetzwergX/jekyll-template-toolkit>.
 {% endcomment %}
 {% if post.tags.size > 0 %}
-	<div>Tagged with:
+	<div>Usado as Tags:
 		<ul class="inlineList tags">
 		{% for tag in post.tags %}
 			<li><a href="tags.html#{{tag | cgi_encode}}">{{ tag }}</a>
