correção na URL

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -19,7 +19,7 @@ layout: page
 	{% endfor %}
 	</ul>
 	<hr />
-	<h3>URL: <a href="{{ page.projecturl }}>{{ page.projecturl}}</a></h3>
+	<h3>URL: <a href="{{ page.projecturl }}">{{ page.projecturl}}</a></h3>
 	<hr />
 	{{ content }}
 	<footer>
