--- a/_includes/headInclude.html
+++ b/_includes/headInclude.html
@@ -3,6 +3,7 @@
 <meta charset="UTF-8" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="description" content="">
+<meta name="keywords" content="{% for tag in post.tags %}{{ tag }}{% unless forloop.last %},{% endunless %}{% endfor %}">
 <!-- css -->
 <link rel="stylesheet" type="text/css" href="/assets/style.css" />
 <link rel="stylesheet" type="text/css" href="/assets/print.css" media="print" />
