--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,11 @@
-			<div id="pageFooter">
+﻿			<div id="pageFooter">
 				<footer>
 					<ul>
-						<li><a href="/impressum.html">Impressum</a></li>
+						<li><a href="https://groups.google.com/forum/?fromgroups#!forum/arduino-minas">Grupo Arduino Minas</a></li>
+						<!-- Ainda não existe <li><a href="/impressum.html">Impressum</a></li> -->
 						<li><a href="/sitemap.html">Sitemap</a></li>
 					</ul>
-					<p class="copyright">&copy; 2012 <a href="/index.html">Sebastian Teumert - Adaptador por Carlos Delfino</a> - Crafted with <a href="http://jekyllrb.com/">Jekyll</a>, hosted on <a href="http://github.com">GitHub</a></p>						
+					<p class="copyright">&copy; 2012 <a href="/index.html">Sebastian Teumert - Adaptador por Carlos Delfino</a> - Crafted with <a href="http://jekyllrb.com/">Jekyll</a>, hospedado por <a href="http://github.com">GitHub</a></p>						
 				</footer>
 			</div>
 		</div>
