Novo correção de idioma

--- a/_includes/widgets/googleSearchForm.html
+++ b/_includes/widgets/googleSearchForm.html
@@ -16,7 +16,7 @@
 	<h1 style="">Pesquisar <span class="hint">via Google</span></h1>
 	<form method="get" action="http://www.google.com/search" id="search" onsubmit="return addSite();">
 		<button type="submit">Pesquisar &raquo;</button>
-		<input name="q" type="text" placeholder="Digite sua busca…" />
+		<input name="q" type="text" placeholder="Buscar…" />
 		<input type="hidden" name="output" value="search" />
 	</form>
 </section>	
