Incluindo Lightbox no cabeçalho

--- a/_includes/headInclude.html
+++ b/_includes/headInclude.html
@@ -11,4 +11,5 @@
 <!-- TODO: link rel="next" / "prev" -->
 <!-- js -->
 <script src="/javascript/jquery-1.8.0.min.js"></script>
+<script src="/javascript/lightbox.js"></script>
 <script src="/javascript/purl.js"></script>
