Inclusão do CSS no cabeçalho

--- a/_includes/headInclude.html
+++ b/_includes/headInclude.html
@@ -6,6 +6,7 @@
 <meta name="keywords" content="{% for tag in page.tags %}{{ tag }}{% unless forloop.last %},{% endunless %}{% endfor %}">
 <!-- css -->
 <link rel="stylesheet" type="text/css" href="/assets/style.css" />
+<link rel="stylesheet" type="text/css" href="/assets/lightbox.css" />
 <link rel="stylesheet" type="text/css" href="/assets/print.css" media="print" />
 <link rel="icon" type="image/x-icon" href="favicon.png" />
 <!-- TODO: link rel="next" / "prev" -->
