--- a/_includes/headInclude.html
+++ b/_includes/headInclude.html
@@ -2,8 +2,8 @@
 <!-- meta -->
 <meta charset="UTF-8" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="description" content="">
-<meta name="keywords" content="{% for tag in page.tags %}{{ tag }}{% unless forloop.last %},{% endunless %}{% endfor %}">
+<meta name="description" content="{% if page and page.excerpt %} {{ page.excerpt }} {% endif %}">
+<meta name="keywords" content="{% if page and  page.tags %} {{ page.tags | array_to_sentence_string }} {% endif %}">
 <!-- css -->
 <link rel="stylesheet" type="text/css" href="/assets/style.css" />
 <link rel="stylesheet" type="text/css" href="/assets/print.css" media="print" />
