Teste Inclusão de Menu Horizontal

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,22 @@
 				</h1>
 			</hgroup>
 		</header>
+		<!--- Menu -->
+		<nav>
+			  <ul class="menu">
+						<li><a href="#">Teste</a></li>
+						<li><a href="#">Sobre</a></li>
+							<li><a href="#">Teste2</a>
+								<ul>
+									  <li><a href="#">Teste</a></li>
+									  <li><a href="#">Teste</a></li>
+									  <li><a href="#">Teste</a></li>                   
+								</ul>
+							</li>
+						<li><a href="#">Teste</a></li>
+						<li><a href="#">Teste</a></li>               
+				</ul>
+		</nav>
 		<!--- GitHub ribbon -->
 		<a href="https://github.com/Arduino-Minas"> <img
 			style="position: absolute; top: 0; right: 0; border: 0;"
