--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,19 +19,10 @@
 		</header>
 		<!--- Menu -->
 		<nav>
-			  <ul class="menu">
-						<li><a href="#">Teste</a></li>
-						<li><a href="#">Sobre</a></li>
-							<li><a href="#">Teste2</a>
-								<ul>
-									  <li><a href="#">Teste</a></li>
-									  <li><a href="#">Teste</a></li>
-									  <li><a href="#">Teste</a></li>                   
-								</ul>
-							</li>
-						<li><a href="#">Teste</a></li>
-						<li><a href="#">Teste</a></li>               
-				</ul>
+			<a href="#">Teste</a>
+			<a href="#">Sobre</a>
+			<a href="#">Teste2</a>
+			<a href="#">Teste</a>          
 		</nav>
 		<!--- GitHub ribbon -->
 		<a href="https://github.com/Arduino-Minas"> <img
