--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
 			</hgroup>
 		</header>
 		<!--- Menu -->
-		<nav class="box">
+		<nav class="menu">
 			<a href="#">Teste</a>
 			<a href="#">Sobre</a>
 			<a href="#">Teste2</a>
