removido algumas informações

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 						<!-- Ainda não existe <li><a href="/impressum.html">Impressum</a></li> -->
 						<li><a href="/sitemap.html">Sitemap</a></li>
 					</ul>
-					<p class="copyright">&copy; 2012 <a href="/index.html">Sebastian Teumert - Adaptador por Carlos Delfino</a> - Crafted with <a href="http://jekyllrb.com/">Jekyll</a>, hospedado por <a href="http://github.com">GitHub</a></p>						
+					<p class="copyright">&copy; 2012 <a href="/index.html">Sebastian Teumert</a> - Grafitado com <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://github.com">GitHub Pages</a></p>						
 				</footer>
 			</div>
 		</div>
