--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,13 +17,10 @@
 				</h1>
 			</hgroup>
 		</header>
-		<!--- Menu 
+		<!--- Menu -->
 		<nav class="menu">
-			<a href="#">Teste</a>
-			<a href="#">Sobre</a>
-			<a href="#">Teste2</a>
-			<a href="#">Teste</a>          
-		</nav> -->
+			<a href="/">Home</a>         
+		</nav> 
 		<!--- GitHub ribbon -->
 		<a href="https://github.com/Arduino-Minas"> <img
 			style="position: absolute; top: 0; right: 0; border: 0;"
