--- a/assets/style.css
+++ b/assets/style.css
@@ -202,6 +202,7 @@ pre {
 .menu{
 	width:1000px;
 	height: 35px;
+	margin: 30px 0;
 	text-align:left;
 	background-color: #fff;
 	-webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
