--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -11,9 +11,12 @@ layout: page
 	{{ content }}
 	<footer>
 	
-		{% if paginator.previous_page %}
-		<h4>{{ page.author | textilize }}</h4>				
+		{% if page.author %}
+		<h4>Por: {{ page.author | markdownify }}</h4>				
 		{% endif %} 
+
+----
+
 		{% assign post = page % %}
 		{% include widgets/postCategoryList.html %}
 		{% include widgets/postTagList.html %}	
