Novo layout para imagens.

--- a/_includes/headInclude.html
+++ b/_includes/headInclude.html
@@ -6,8 +6,9 @@
 <meta name="keywords" content="{% if page and  page.tags %} {{ page.tags | array_to_sentence_string }} {% endif %}">
 <!-- css -->
 <link rel="stylesheet" type="text/css" href="/assets/style.css" />
-<link rel="stylesheet" type="text/css" href="/assets/lightbox.css" />
 <link rel="stylesheet" type="text/css" href="/assets/print.css" media="print" />
+<link rel="stylesheet" type="text/css" href="/assets/lightbox.css" />
+<link rel="stylesheet" type="text/css" href="/assets/image.css" />
 <link rel="icon" type="image/x-icon" href="favicon.png" />
 <!-- TODO: link rel="next" / "prev" -->
 <!-- js -->
