Adiciona Link para o curso no Menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,8 @@
 		</header>
 		<!--- Menu -->
 		<nav class="menu">
-			<a href="/">Home</a>         
+			<a href="/">Home</a>
+			<a href="/Curso2013/">Curso Arduino</a>
 		</nav> 
 		<!--- GitHub ribbon -->
 		<a href="https://github.com/Arduino-Minas"> <img
