--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,6 +8,8 @@ layout: page
 		<h1><span><a href="{{post.url}}" title="Leia mais sobre '{{ post.title }}'">{{ post.title }}</a></span></h1>
 	</header>	
 	{{ post.excerpt | markdownify }}
+	
+	<h3><span><a href="{{post.url}}" title="Leia mais sobre '{{ post.title }}'">Leia Mais</a></span></h3>
 	<footer>	
 		{% include widgets/postCategoryList.html %}
 		{% include widgets/postTagList.html %}	
