Separado o Menu do Topo do Header, para facilitar edição e formatação.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,10 +18,7 @@
 			</hgroup>
 		</header>
 		<!--- Menu -->
-		<nav class="menu">
-			<a href="/">Home</a>
-			<a href="/Curso2013/">Curso Arduino</a>
-		</nav> 
+		{% include headtopmenu.html % }
 		<!--- GitHub ribbon -->
 		<a href="https://github.com/Arduino-Minas"> <img
 			style="position: absolute; top: 0; right: 0; border: 0;"
