Adicionado página para projetos. separado o menu topo da direita para seu proprio arquivo.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,10 +7,7 @@
 <body>
 	<div id="wrap">
 		<header id="header" role="banner" class="box" style="">
-			<ul>
-				<li><a href="/archives.html">Arquivos</a></li>
-				<li><a href="/feed.xml">RSS</a></li>
-			</ul>
+			{% include headtoprightmenu.html %}
 			<hgroup>
 				<h1>
 					<a href="/">{{ site.title }}</a>
