--- a/_includes/headtopmenu.html
+++ b/_includes/headtopmenu.html
@@ -1,5 +1,6 @@
 <nav class="menu">
-	<a href="/">Home</a>
+	<a href="/">Início</a>
+	<a href="/projects.html">Projetos</a>
 	<a href="/Curso2013/">Curso Arduino</a>
 </nav> 
 		
