Correção do menu projeto, inserido sem a tag <li>

--- a/_includes/headtoprightmenu.html
+++ b/_includes/headtoprightmenu.html
@@ -1,5 +1,5 @@
 <ul>
 	<li><a href="/archives.html">Arquivos</a></li>
-	<a href="/projects.html">Projetos</a>
+	<li><a href="/projects.html">Projetos</a></li>
 	<li><a href="/feed.xml">RSS</a></li>
 </ul>
