Cabeçalhos para Facebook e Scripts Cautela ao adicionar novos IDs no facebookhead.html

--- a/_includes/headInclude.html
+++ b/_includes/headInclude.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="description" content="{% if page and page.excerpt %} {{ page.excerpt }} {% endif %}">
 <meta name="keywords" content="{% if page and  page.tags %} {{ page.tags | array_to_sentence_string }} {% endif %}">
+{% include facebookhead.html %} 
 <!-- css -->
 <link rel="stylesheet" type="text/css" href="/assets/style.css" />
 <link rel="stylesheet" type="text/css" href="/assets/print.css" media="print" />
