Diversos Ajustes. Ainda vem mais.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,14 +17,11 @@
 <div id="header-wrapper">
 	<div id="header-wrapper-2">
 		<div class="center-wrapper">
-
 			<div id="header">
-
 				<div id="logo">
 					<h1 id="site-title"><a href="#">{{ site.title }}</a></h1>
 					<h2 id="site-slogan">{{ site.slogan }}</h2>
 				</div>
-
 				<div id="help-wrapper">
 					<div id="help">
 {% comment %}
@@ -33,7 +30,7 @@ Estarei vendo uma nova abordagem para o formato do arquivo de forma a ficar
 independente de formatação.
 Todos os Includes devem ser independentes de formatação
 {% endcomment %}
-						<a href="#">Contato</a> <span class="text-separator">|</span> <a href="#">F.A.Q</a> <span class="text-separator">|</span> <a href="#">Sitemap</a>
+						<a href="contacts.html">Contato</a> <span class="text-separator">|</span> <a href="#">F.A.Q</a> <span class="text-separator">|</span> <a href="#">Sitemap</a>
 
 					</div>
 				</div>
@@ -59,3 +56,4 @@ Todos os Includes devem ser independentes de formatação
 		</div>
 	</div>
 </div>
+<div id="content-wrapper">
