--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,7 +7,7 @@ layout: page
 			<div id="featured-wrapper">
 				<div id="featured">
 					<div class="left" style="width: 400px; heigth: 330px" >
-						{{ content | makrdownify }}
+						{{ content }}
 					</div>
 					<div class="right">
 						<img src="{{ site.logo }}" width="318" height="330" alt="" />
@@ -18,11 +18,11 @@ layout: page
 			<div id="main">
 				<div class="separator-vertical">
 					<div class="col2 left">
-						<h2 class="left">Projetos</h2>
-						<div class="right more large"><a href="projects.html">Nossos Projetos &#187;</a></div>						
+						<h2 class="left">{{ site.projects }}</h2>
+						<div class="right more large"><a href="projects.html">Todos os Projetos &#187;</a></div>						
 						<div class="clearer">&nbsp;</div>
 						{% for post in site.posts limit:4 %}
-						   {% if post.projectpost %}
+						   {% if post.category || downcase = {{ site.projects | downcase }} %}
 						<div class="content-separator"></div>
 								{% if post.thumb %}
 						<img src="{{ post.thumb }}" width="64" height="64" alt="" class="left bordered" />
@@ -39,8 +39,8 @@ layout: page
 						<div class="clearer">&nbsp;</div>
 						<ul class="nice-list">
 						{% for post in site.posts limit:5 %}
-						   {% unless post.projectpost and post.phrase %}
-							<li><span>{{ post.date | %Y-%m-%d }} |</span> <a href="{{ post.url }}">{{ post.title }}</a></li>
+						   {% unless post.category | downcase = {{ site.news | downcase }} and post.category | downcase =  {{ site.phrases | downcase }} %}
+							<li><span>{{ post.date | date: "%Y-%m-%d" }} |</span> <a href="{{ post.url }}">{{ post.title }}</a></li>
 							{% endunless %}
 						{% endfor %}
 						</ul>												
@@ -48,7 +48,7 @@ layout: page
 						<div class="right more large"><a href="frases.html">Mais &#187;</a></div>
 						<div class="clearer">&nbsp;</div>
 						{% for post in site.posts limit:3 %}
-						   {% if post.phrase %}
+						   {% if post.category | downcase = {{ site.phrase || downcase }} %}
 						<blockquote>
 							<p><span>&quot;</span> {{ post.excerpt }} <span>&quot;</span></p>
 							<cite>{{ post.author }}</cite>
