mais um pouco de correção.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@ Estarei vendo uma nova abordagem para o formato do arquivo de forma a ficar
 independente de formatação.
 Todos os Includes devem ser independentes de formatação
 {% endcomment %}
-						<a href="contacts.html">Contato</a> <span class="text-separator">|</span> <a href="#">F.A.Q</a> <span class="text-separator">|</span> <a href="#">Sitemap</a>
+						<a href="contacts.html">Contato</a> <span class="text-separator">|</span> <a href="/">F.A.Q</a> <span class="text-separator">|</span> <a href="sitemap.html">Sitemap</a>
 
 					</div>
 				</div>
