--- a/_layouts/noindex.html
+++ b/_layouts/noindex.html
@@ -14,7 +14,7 @@
 						<!-- categories -->	
 						<ul>
 						{% for category in site.categories %}
-							<li>{{ category | first }}<a name="{{ category | first | cgi_escape }}"></a></li>
+							<li><a href="categories.html?{{ category | first | cgi_escape }}">{{ category | first }}</a></li>
 						{% endfor %}
 						</ul>
 					</div>
