--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,6 +1,7 @@
 <nav class="menu">
 	<a href="/">Início</a>
 	<a href="/projects.html">Projetos</a>
+	<a href="/categories.html">Categorias</a>
 	<a href="/Curso2013/">Curso Arduino</a>
 </nav> 
 		
