Mais correçõe e melhorias.

--- a/_layouts/intro.html
+++ b/_layouts/intro.html
@@ -2,19 +2,19 @@
 layout: index
 title: Início
 ---
-# Estamos em Construção
+<h1>Estamos em Construção</h1>
 
 <hr />
 <p align="justify">Estamos trabalhando em um novo layout para nosso site!</p>
-<p align="justify">Não deixe de nos visitar usando um dos Linsk: 
+<p align="justify">Não deixe de nos visitar usando um dos Links: 
 	<ul>
-	<li>[Google Groups](https://groups.google.com/forum/?hl=pt-BR&fromgroups#!forum/arduino-minas)
+	<li><a href="https://groups.google.com/forum/?hl=pt-BR&fromgroups#!forum/arduino-minas">Google Groups</a>
 	</li> 
-	<li>[Twitter @ArduinoMinas](http://twitter/ArduinoMinas),
+	<li><a href="http://twitter/ArduinoMinas">Twitter @ArduinoMinas</a>
 	</li>
-	<li>[Fanpage no Facebook](http://fb.me/ArduinoMinas),
+	<li><a href="http://fb.me/ArduinoMinas">Fanpage no Facebook</a>
 	</li> 
-	<li>[Grupos no Facebook](http://fb.me/groups/ArduinoMinas)
+	<li><a href="http://fb.me/groups/ArduinoMinas">Grupos no Facebook</a>
 	</li>
 	</ul>
 </p>
