--- a/_includes/widgets/postCategoryList.html
+++ b/_includes/widgets/postCategoryList.html
@@ -12,7 +12,7 @@
 	<div>Posted in
 		<ul class="inlineList categories">
 			{% for category in post.categories %}
-				<li><a href="categories.html#{{ category | cgi_escape }}">{{ category }}</a>
+				<li><a href="categories.html#{{ category | first | cgi_escape }}">{{ category }}</a>
 				{% unless forloop.last %},{% endunless %}
 				</li>					
 			{% endfor %}
