Novos recursos como botão do Plus, Like do face e outras correções.

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,6 +2,7 @@
 	<a href="/">Início</a>
 	<a href="/projects.html">Projetos</a>
 	<a href="/categories.html">Categorias</a>
+	<a href="/arquives.html">Arquivo</a>
 	<a href="/Curso2013/">Curso Arduino</a>
 </nav> 
 		
