--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -25,6 +25,8 @@ layout: noindex
 	<footer>
 		{% assign post = page % %}
 		{% include widgets/postCategoryList.html %}
-		{% include widgets/postTagList.html %}	
+		{% include widgets/postTagList.html %}
+		<hr />
+		{% include socialbuttons.html %}	
 	</footer>
 </article>
