--- a/_layouts/noindex.html
+++ b/_layouts/noindex.html
@@ -6,48 +6,6 @@ layout: page
 		<div id="main-wrapper">
 			<div id="main">{{ content }}</div>
 		</div>
-		<div id="sidebar-wrapper">
-			<div id="sidebar">
-				<div class="box">
-					<div class="box-title">Categorias</div>
-					<div class="box-content">
-						<!-- categories -->
-						<ul>
-							{% for category in site.categories %}
-							<li><a href="categories.html?{{ category | first | cgi_escape }}">
-							{{ category }}</a></li>
-							{% endfor %}
-						</ul>
-					</div>
-				</div>
-				<div class="box">
-					<div class="box-title">Recursos</div>
-					<div class="box-content">
-						<ul class="nice-list">
-							<li><a href="http://www.arduino.cc/" rel="nofollow">Arduino</a>
-								- Prototyping Platform</li>
-							<li><a href="http://templates.arcsin.se/">Arcsin Web
-									Templates</a></li>
-							<li><a href="http://www.google.com/" rel="nofollow">Google</a>
-								- Web Search</li>
-							<li><a href="http://www.w3schools.com/" rel="nofollow">W3Schools</a>
-								- Online Web Tutorials</li>
-						</ul>
-					</div>
-				</div>
-				<div class="box nobborder">
-					<div class="box-title">{{ site.title }}</div>
-					<div class="box-content">
-						<p>Uma Comunidade que compartilha Tecnologia, Criatividade e
-							Conhecimento.</p>
-						<p>
-							Participe em nosso Grupo no Google: <a
-								href="https://groups.google.com/forum/?hl=pt-BR&fromgroups#!forum/arduino-minas">Arduino
-								Minas</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="clearer">&nbsp;</div>
+		{% include sidebar.html %}
 	</div>
 </div>
