--- a/_includes/facebooklike.html
+++ b/_includes/facebooklike.html
@@ -1,3 +1,3 @@
-<div class="fb-like" data-href="{{ page.url }}"
+<div class="fb-like" data-href="{{ site.url }}{{ page.url }}"
 	data-send="true" data-layout="button_count" data-width="450"
 	data-show-faces="true"></div>
