--- a/_includes/facebookcomment.html
+++ b/_includes/facebookcomment.html
@@ -2,5 +2,5 @@
 	{% unless fb_comments_data_width %}
 		{% assign fb_comments_data_width = 600 %}
 	{% endunless %}
-<div class="fb-comments" data-href="{{ page.url }}" data-width="{{ fb_comments_data_width }}" data-num-posts="10"></div>
+<div class="fb-comments" data-href="{{ site.url }}{{ page.url }}" data-width="{{ fb_comments_data_width }}" data-num-posts="10"></div>
 {% endif %}
