--- a/_includes/headInclude.html
+++ b/_includes/headInclude.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" type="text/css" href="/assets/css/print.css" media="print" />
 <link rel="stylesheet" type="text/css" href="/assets/css/lightbox.css" />
 <link rel="stylesheet" type="text/css" href="/assets/css/image.css" />
-<link rel="icon" type="image/x-icon" href="favicon.png" />
+<link rel="icon" type="image/x-icon" href="/favicon.png" />
 <!-- js -->
 <script src="/assets/js/jquery-1.8.0.min.js"></script>
 <script src="/assets/js/lightbox.js"></script>
