Adicionado botão do Twitter.

--- a/_includes/socialbuttons.html
+++ b/_includes/socialbuttons.html
@@ -1,5 +1,10 @@
 <div id="socialbuttons">
-{% include facebooklike.html %}
-{% include plusonebutton.html %}
-{% include linkedinshare.html %}
+<table>
+<tr>
+<td>{% include facebooklike.html %}</td>
+<td>{% include plusonebutton.html %}</td>
+<td>{% include linkedinshare.html %}</td>
+<td>{% include twitterbutton.html %}</td>
+</tr>
+</table>
 </div>
