--- a/_includes/headInclude.html
+++ b/_includes/headInclude.html
@@ -8,13 +8,22 @@
 <meta name="author" content="{{ page.author }}" />
 {% endif %}
 {% include facebookhead.html %} 
+<!-- favicon -->
+<link rel="icon" type="image/x-icon" href="/favicon.png" />
 <!-- css -->
 <link rel="stylesheet" type="text/css" href="/assets/css/style.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="/assets/css/print.css" media="print" />
 <link rel="stylesheet" type="text/css" href="/assets/css/lightbox.css" />
 <link rel="stylesheet" type="text/css" href="/assets/css/image.css" />
-<link rel="icon" type="image/x-icon" href="/favicon.png" />
+<!--  custon css -->
+{% for style in page.stylesheets %}
+<link rel="stylesheet" type="text/css" href="{{ style }}" />
+{% endfor %} 
 <!-- js -->
 <script src="/assets/js/jquery-1.8.0.min.js"></script>
 <script src="/assets/js/lightbox.js"></script>
 <script src="/assets/js/purl.js"></script>
+<!--  custon css -->
+{% for script in page.javascripts %}
+<script src="{{script}}"></script>
+{% endfor %} 
