--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
 <div id="bottom">
 	<div class="center-wrapper">
 		<div class="left">
-			&copy; 2013 ArduinoMinas.com.br - {{ site.slogan }} <span class="text-separator">|</span> <a href="#">Privacy Policy</a> <span class="text-separator">|</span> <a href="use.html">Terms of Use</a> 
+			&copy; 2013 ArduinoMinas.com.br - {{ site.slogan }} <span class="text-separator">|</span> <a href="/use.html">Termos de Uso</a> 
 		</div>
 		<div class="right">
 			<a href="http://templates.arcsin.se/">Website template</a> by <a href="http://arcsin.se/">Arcsin</a> 
