--- a/_includes/widgets/postCategoryList.html
+++ b/_includes/widgets/postCategoryList.html
@@ -12,7 +12,7 @@
 	<div>Postado em:
 		<ul class="inlineList categories">
 			{% for category in post.categories %}
-				<li><a href="categories.html#{{ category | first | cgi_escape }}">{{ category }}</a>{% unless forloop.last %},{% endunless %} </li>
+				<li><a href="/categories.html#{{ category | first | cgi_escape }}">{{ category }}</a>{% unless forloop.last %},{% endunless %} </li>
 			{% endfor %}
 		</ul>
 	</div>	
