--- a/_includes/headInclude.html
+++ b/_includes/headInclude.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" type="text/css" href="/assets/css/image.css" />
 <!--  custon css -->
 {% for style in page.stylesheets %}
-<link rel="stylesheet" type="text/css" href="{{ style }}" />
+<link rel="stylesheet" type="text/css" href="{{style | cgi_scape}}" />
 {% endfor %} 
 <!-- js -->
 <script src="/assets/js/jquery-1.8.0.min.js"></script>
@@ -25,5 +25,5 @@
 <script src="/assets/js/purl.js"></script>
 <!--  custon css -->
 {% for script in page.javascripts %}
-<script src="{{script}}"></script>
+<script src="{{script | cgi_scape}}"></script>
 {% endfor %} 
