correção da formtação.

--- a/_layouts/noindex.html
+++ b/_layouts/noindex.html
@@ -9,6 +9,7 @@ layout: page
 			{% if page.usesocialbuttons %}
 			{% include socialbuttons.html %}
 			{% endif %}
+			</div>
 		</div>
 		{% include sidebar.html %}
 	</div>
