--- a/_includes/facebookpluginscript.html
+++ b/_includes/facebookpluginscript.html
@@ -1,3 +1,4 @@
+{% if page.facebookpluginscriptloaded != true %}
 {% if page.nofacebook != true %}
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -7,4 +8,7 @@
   js.src = "//connect.facebook.net/pt_BR/all.js#xfbml=1&appId=351518334888083";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+
+{% assign page.facebookpluginscriptloaded = true %}
+{% endif %}
 {% endif %}
