Adaptando Footer ao HTML5

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 </div>
 <div id="footer-wrapper">
 	<div class="center-wrapper">
-		<div id="footer">
+		<footer>
 			<div class="left">
 				{% include menu.html %}
 			</div>
@@ -9,7 +9,7 @@
 				<a href="#">Top ^</a>
 			</div>			
 			<div class="clearer">&nbsp;</div>
-		</div>
+		</footer>
 	</div>
 </div>
 <div id="bottom">
