--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -544,17 +544,17 @@ ul.tabbed a {text-decoration: none;}
 	border-top: 1px solid #999;
 	padding-bottom: 20px;
 }
-#footer {
+footer {
 	background: #808080;
 	font-size: 1.1em;
 	padding: 12px 16px;
 }
-#footer a {
+footer a {
 	color: #DDD;
 	text-decoration: none;
 }
-#footer a:hover {color: #FFF;}
-#footer span.text-separator {
+footer a:hover {color: #FFF;}
+footer span.text-separator {
 	color: #999;
 	padding: 0 3px;
 }
