Adaptando Header ao HTML5

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 <div id="header-wrapper">
 	<div id="header-wrapper-2">
 		<div class="center-wrapper">
-			<div id="header">
+			<header>
 				<div id="logo">
 					<h1 id="site-title"><a href="#">{{ site.title }}</a></h1>
 					<h2 id="site-slogan">{{ site.slogan }}</h2>
@@ -25,7 +25,7 @@
 						<a href="contacts.html">Contato</a> <span class="text-separator">|</span> <a href="/">F.A.Q</a> <span class="text-separator">|</span> <a href="sitemap.html">Sitemap</a>
 					</div>
 				</div>
-			</div>
+			</header>
 		</div>
 	</div>
 </div>
