--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -421,7 +421,7 @@ div.comment-list {
 
 #header-wrapper {background: #2F2F2F url('/assets/images/header.gif') repeat-x left top;}
 #header-wrapper-2 {background: url('/assets/images/header-wrapper-2.gif') repeat-y center top;}
-#header {
+header {
 	background: #333 url('/assets/images/header.gif') repeat-x left top;
 	padding: 32px 32px 0 46px;
 }
