--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -421,7 +421,7 @@ div.comment-list {
 
 #header-wrapper {background: #2F2F2F url('/assets/images/header.gif') repeat-x left top;}
 #header-wrapper-2 {background: url('/assets/images/header-wrapper-2.gif') repeat-y center top;}
-header {
+header.site_h {
 	background: #333 url('/assets/images/header.gif') repeat-x left top;
 	padding: 32px 32px 0 46px;
 }
@@ -544,17 +544,17 @@ ul.tabbed a {text-decoration: none;}
 	border-top: 1px solid #999;
 	padding-bottom: 20px;
 }
-footer {
+footer.site_f {
 	background: #808080;
 	font-size: 1.1em;
 	padding: 12px 16px;
 }
-footer a {
+footer.site_f a {
 	color: #DDD;
 	text-decoration: none;
 }
-footer a:hover {color: #FFF;}
-footer span.text-separator {
+footer.site_f a:hover {color: #FFF;}
+footer.site_f span.text-separator {
 	color: #999;
 	padding: 0 3px;
 }
