Adicionando classe ao footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 </div>
 <div id="footer-wrapper">
 	<div class="center-wrapper">
-		<footer>
+		<footer class="site_f">
 			<div class="left">
 				{% include menu.html %}
 			</div>
