Adicionando classe ao HEADER

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 <div id="header-wrapper">
 	<div id="header-wrapper-2">
 		<div class="center-wrapper">
-			<header>
+			<header class="site_h">
 				<div id="logo">
 					<h1 id="site-title"><a href="#">{{ site.title }}</a></h1>
 					<h2 id="site-slogan">{{ site.slogan }}</h2>
