--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -22,7 +22,7 @@ layout: page
 						<div class="right more large"><a href="projects.html">Todos os Projetos &#187;</a></div>						
 						<div class="clearer">&nbsp;</div>
 						{% for post in site.posts limit:4 %}
-						   {% if post.categories contains 'Projetos' %}
+						   {% if post.projectpost  %}
 						<div class="content-separator"></div>
 								{% if post.thumb %}
 						<img src="{{ post.thumb }}" width="64" height="64" alt="" class="left bordered" />
