Melhoria na organização e inserção dos scripts de redes sociais.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,8 +23,10 @@
 		<div class="clearer">&nbsp;</div>
 	</div>
 </div>
-{% include googleAnalytics.html %}
-{% include facebookpluginscript.html %}
+{% include google/analytics.html %}
+{% include facebook/pluginscript.html %}
+{% include plusone/pluginscript.html %}
+{% include twitter/pluginscript.html %}
 <!--- GitHub ribbon -->
 <a href="https://github.com/Arduino-Minas"> <img
 	style="position: absolute; top: 0; right: 0; border: 0;"
