--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,17 +2,7 @@
 	<div id="sidebar">
 		{% include categoriesbox.html %}
 		{% include resourcelinksbox.html %}
-		<div class="box nobborder">
-			<div class="box-title">{{ site.title }}</div>
-			<div class="box-content">
-				<p>Uma Comunidade que compartilha Tecnologia, Criatividade e
-					Conhecimento.</p>
-				<p>
-					Participe em nosso Grupo no Google: <a
-						href="https://groups.google.com/forum/?hl=pt-BR&fromgroups#!forum/arduino-minas">Arduino
-						Minas</a>
-			</div>
-		</div>
+		{% include sloganbox.html %}
 	</div>
 </div>
 <div class="clearer">&nbsp;</div>
