--- a/_includes/socialbuttons.html
+++ b/_includes/socialbuttons.html
@@ -1,10 +1,10 @@
 <div id="socialbuttons">
 <table>
 <tr>
-<td>{% include facebooklike.html %}</td>
-<td>{% include plusonebutton.html %}</td>
-<td>{% include linkedinshare.html %}</td>
-<td>{% include twitterbutton.html %}</td>
+<td>{% include facebook/like.html %}</td>
+<td>{% include plusone/button.html %}</td>
+<td>{% include linkedin/share.html %}</td>
+<td>{% include twitter/button.html %}</td>
 </tr>
 </table>
 </div>
