--- a/_includes/headInclude.html
+++ b/_includes/headInclude.html
@@ -7,7 +7,7 @@
 {% if page.author %}
 <meta name="author" content="{{ page.author }}" />
 {% endif %}
-{% include facebookhead.html %} 
+{% include facebook/head.html %} 
 <!-- favicon -->
 <link rel="icon" type="image/x-icon" href="/favicon.png" />
 <!-- css -->
