Correção no ID da Aplicação e melhorias.

--- a/_includes/facebook/opengraphic.html
+++ b/_includes/facebook/opengraphic.html
@@ -1,5 +1,5 @@
-<meta property="fb:admins" content="carlosdelfinocarvalhopinheiro"/>
-<meta property="fb:app_id" content="189875687827636"/>
+<meta property="fb:admins" content="{{site.fbadmins}}"/>
+<meta property="fb:app_id" content="{{site.fbappid}}"/>
 <meta property="og:title" content="{{page.title}}" />
 {% if post %}
 <meta property="og:type" content="article" />
