correção da inclusão do box para comentários do FaceBook.

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -26,5 +26,5 @@ usesocialbuttons: false
 		{% include widgets/postTagList.html %}	
 	</footer>
 	{% include socialbuttons.html %}
-	{% include facebookcomment.html %}
+	{% include facebook/comment.html %}
 </article>
