correção no código que define a página como um posto.

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -2,7 +2,7 @@
 layout: noindex
 usesocialbuttons: false
 ---
-{% assign post = page % %}
+{% assign post = page %}
 <article class="box">
 	<header>
 		<time datetime="{{page.date | date: '%Y-%m-%d'}}" title="{{page.date | date:'%Y-%m-%d'}}">{{page.date | date: "%d.%m.%Y"}}</time>
