inserido o site na URL da imagem.

--- a/_includes/facebook/opengraphic.html
+++ b/_includes/facebook/opengraphic.html
@@ -5,7 +5,7 @@
 <meta property="og:type" content="{{page.ogtype}}" />
 {% endif %}
 <meta property="og:url" content="{{site.url}}{{page.url}}" />
-<meta property="og:image" content="{{site.defaultlogo}}" />
+<meta property="og:image" content="{{site.url}}{{site.defaultlogo}}" />
 <meta property="og:site_name" content="{{site.title}}"/>
 {% if post %}
 {% if post.excerpt %}}
