Agora é possível usar um logo especifico para o artigo. Caso não seja informado o logo para o artigo, usa-se do site.

--- a/_includes/facebook/opengraphic.html
+++ b/_includes/facebook/opengraphic.html
@@ -5,7 +5,11 @@
 <meta property="og:type" content="{{page.ogtype}}" />
 {% endif %}
 <meta property="og:url" content="{{site.url}}{{page.url}}" />
+{% if page.defaultlogo %}
+<meta property="og:image" content="{{site.url}}{{page.defaultlogo}}" />
+{% else %}
 <meta property="og:image" content="{{site.url}}{{site.defaultlogo}}" />
+{% end %}
 <meta property="og:site_name" content="{{site.title}}"/>
 {% if post %}
 {% if post.excerpt %}}
