correção de fechamento da tag.

--- a/_includes/facebook/opengraphic.html
+++ b/_includes/facebook/opengraphic.html
@@ -9,7 +9,7 @@
 <meta property="og:image" content="{{site.url}}{{page.defaultlogo}}" />
 {% else %}
 <meta property="og:image" content="{{site.url}}{{site.defaultlogo}}" />
-{% end %}
+{% endif %}
 <meta property="og:site_name" content="{{site.title}}"/>
 {% if post %}
 {% if post.excerpt %}}
