ajuste na codificação de página no layout intro

--- a/_layout/intro.html
+++ b/_layout/intro.html
@@ -2,7 +2,7 @@
 layout: index
 title: Início
 ---
-<h1>Estamos em Construção</h1>
+<h1>Estamos em Construçãoo</h1>
 
 <hr />
 <p align="justify">Estamos trabalhando em um novo layout para nosso site!</p>
